--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,19 +4,19 @@ body{
 	background: #eee;
 }
 
-h1{
+/*h1{
 	color:red;
 	text-transform: uppercase;
 	letter-spacing: 5px;
 	font-weight: 300;
-}
+}*/
 
 
 h2{
 	color: blue;
 }
 
-a{
+/*a{
 	color:green;
 	text-decoration: none;
 	transition: 0.3s;
@@ -28,11 +28,17 @@ a:hover{
 	transform: scale(1.2);
 	letter-spacing: 3px;
 
-}
+}*/
 
 #container{
 	margin: auto;
 	width: 960;
 	height:  auto;
 	background: white;
+}
+
+
+
+.selector-for-some-widget {
+  box-sizing: content-box;
 }
